--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,38 @@
+* {
+  margin: 1px 10px 10px 1px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-family: "Poppins", sans-serif;
 }
 h1 {
+  margin-top: 50px;
   font-size: 50px;
+  margin-left: 50px;
+  column-gap: normal;
+  color: rgb(123, 194, 226);
+}
+.h1-color{
+  color: rgb(154, 199, 214);
 }
 .h2 {
   font-size: 30px;
+  margin-left: 220px;
 }
 .name-color {
   color: #5ea4e6;
   font-weight: 700;
 }
-section {
+.top-banner {
   display: flex;
-  background-image: linear-gradient(#e3e6e7d8, #8dd1ecd8);
   box-shadow: 10px 10px 10px lightgray;
+  background-image: url(/images/developer.png),
+    linear-gradient(#e3e6e7d8, #8dd1ecd8);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
+
 .half-width {
   width: 50%;
   padding-left: 5%;
@@ -31,8 +47,10 @@ section {
   color: rgba(48, 57, 70, 0.938);
   text-shadow: 0px 0px 6px 10px gray;
   text-decoration: underline black;
+  margin-right: 70px;
 }
 .half-width p {
+  margin-left: 30px;
   text-align: center;
   color: rgba(0, 0, 0, 0.884);
   font-weight: 515;
@@ -46,5 +64,5 @@ section {
   text-align: center;
   padding: 10px 40px;
   border-radius: 5px;
-  margin-left: 350px;
+  margin-left: 300px;
 }
