--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,15 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
-h1 {
+.h1 {
   margin-top: 50px;
   font-size: 50px;
   margin-left: 50px;
   column-gap: normal;
   color: rgb(123, 194, 226);
 }
-.h1-color{
-  color: rgb(154, 199, 214);
+.h1-color {
+  color: rgba(255, 130, 108, 0.918);
 }
 .h2 {
   font-size: 30px;
@@ -66,4 +66,49 @@ h1 {
   padding: 10px 40px;
   border-radius: 5px;
   margin-left: 300px;
+}
+.dream-big {
+  text-align: center;
+  display: flex;
+  box-shadow: 10px 10px 10px lightgray;
+  background-image: linear-gradient(#e3e6e7d8, #8dd1ecd8);
+}
+.dream-big img {
+  width: 50%;
+  padding-left: 150px;
+  padding-top: 50px;
+}
+.h3 {
+  text-align: center;
+  font-weight: 700;
+  padding-left: 75px;
+  font-size: x-larger;
+  font: bolder;
+  /* color: rgba(255, 118, 94, 0.842); */
+}
+.dream-big1 {
+  text-align: center;
+  font-synthesis: style;
+  padding-left: 50px;
+  font-weight: 700;
+  margin-top: 1%;
+  text-decoration: underline;
+}
+.dream-bigp{
+  text-align: center;
+  margin-bottom: 2%;
+}
+.link-btn2{
+  text-decoration: none;
+  background-image: linear-gradient(#7acbebd8, tomato);
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  padding: 10px 40px;
+  border-radius: 5px;
+  margin-left: 50px;
+  text-align: center;
+}
+.h1-color1{
+  color: rgba(255, 130, 108, 0.918);
 }
