--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   box-shadow: 10px 10px 10px lightgray;
   background-image: url(/images/developer.png),
-    linear-gradient(#7acbebd8,lightgray);
+    linear-gradient(#7acbebd8, lightgray);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -39,7 +39,9 @@ body {
   padding-left: 5%;
 }
 .half-width img {
-  width: 60%;
+  border-bottom-right-radius: 10%;
+  border-top-right-radius: 15%;
+  width: 50%;
   padding-left: 150px;
   padding-top: 50px;
 }
@@ -68,7 +70,6 @@ body {
   margin-left: 300px;
 }
 .dream-big {
-
   text-align: center;
   display: flex;
   box-shadow: 10px 10px 10px lightgray;
@@ -78,6 +79,7 @@ body {
   width: 50%;
   padding-left: 150px;
   padding-top: 50px;
+  margin-right: 400px;
 }
 .h3 {
   text-align: center;
@@ -116,9 +118,9 @@ body {
 .experience-education {
   display: flex;
   gap: 10px;
-  background-image: linear-gradient(lightgray,#7acbebd8);
+  background-image: linear-gradient(lightgray, #7acbebd8);
   box-shadow: 10px 10px 10px lightgray;
-  
+
   justify-content: space-between;
 }
 .education {
@@ -130,4 +132,7 @@ body {
   padding: 80px 100px;
   padding-right: 500px;
   padding-top: 75px;
+}
+.section-title{
+  justify-content: center;
 }
