--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,44 @@ body {
   border-radius: 5px;
   font-weight: 700;
   background-image: linear-gradient(#7acbebd8, tomato);
-  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.resume-content {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
 }
 .education {
-  padding-right: 300px;
   padding-top: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
+.education-item {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.education-title {
+  font-size: 25px;
+  font-weight: 700;
+  color: #474747;
+  text-align: left;
+}
+.sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 2px;
+  text-align: left;
+}
+.cg {
+  text-align: left;
+  font-weight: 700;
+  color: #757575;
+  font-family: "Times New Roman", Times, serif;
+}
+.description {
+  font-weight: 700;
+  color: #757575;
+  font-family: "Times New Roman", Times, serif;
+  text-align: left;
 }
