--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: 1px 10px 10px 1px;
+  margin: 0px 2px 5px 1px;
 }
 
 body {
@@ -39,11 +39,11 @@ body {
   padding-left: 5%;
 }
 .half-width img {
-  border-bottom-right-radius: 10%;
-  border-top-right-radius: 15%;
+  border-radius: 120px;
   width: 50%;
   padding-left: 150px;
   padding-top: 50px;
+  padding-right: 20px;
 }
 .half-width h3 {
   text-align: center;
@@ -58,6 +58,7 @@ body {
   color: rgba(0, 0, 0, 0.884);
   font-weight: 515;
   margin-bottom: 20px;
+  font-size: 18px;
 }
 .link-btn {
   text-decoration: none;
@@ -80,6 +81,8 @@ body {
   padding-left: 150px;
   padding-top: 50px;
   margin-right: 400px;
+  border-bottom-right-radius: 60px;
+  border-top-left-radius: 35%;
 }
 .h3 {
   text-align: center;
@@ -87,7 +90,7 @@ body {
   padding-left: 75px;
   font-size: x-larger;
   font: bolder;
-  /* color: rgba(255, 118, 94, 0.842); */
+  color: rgba(255, 118, 94, 0.842);
 }
 .dream-big1 {
   text-align: center;
@@ -100,6 +103,7 @@ body {
 .dream-bigp {
   text-align: center;
   margin-bottom: 2%;
+  font-size: 18px;
 }
 .link-btn2 {
   text-decoration: none;
@@ -116,24 +120,24 @@ body {
   color: rgba(255, 130, 108, 0.918);
 }
 .resume {
-  background-image: linear-gradient(lightgray, #7acbebd8);
+  background-image: linear-gradient(#e3e6e7d8, lightgray);
   box-shadow: 10px 10px 10px lightgray;
 }
 .section-title {
-  padding: 30px 20px 20px 30px;
-  margin-right: 800px;
-  margin-left: 600px;
+  padding: 30px 20px 30px 20px;
+  margin-right: 700px;
+  margin-left: 550px;
   text-align: center;
   color: #ddf5fffa;
   text-decoration: underline;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: 700;
   background-image: linear-gradient(#7acbebd8, tomato);
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 .resume-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   text-align: center;
 }
 .education {
@@ -208,4 +212,47 @@ body {
 .hr {
   margin-left: 250px;
   margin-right: 250px;
+}
+.end{
+ background-image: linear-gradient( lightgray,#7acbebd8);
+
+}
+.like {
+  background-image: linear-gradient(lightgray,#e3e6e7d8, );
+  padding-top: 20px;
+  margin: 0px 230px;
+  box-shadow: 30px 30px 30px 0px lightgray;
+}
+.like1 {
+  background-image: linear-gradient(#e3e6e7d8, lightgray);
+  box-shadow: 10px 10px 10px lightgray;
+  display: flex;
+  gap: 90px;
+  justify-content: center;
+}
+.like-title {
+  text-align: center;
+  padding-top: 15px;
+  margin-bottom: 20px;
+
+  padding: 30px 20px 20px 30px;
+  margin-right: 600px;
+  margin-left: 400px;
+  text-align: center;
+  color: #ddf5fffa;
+  text-decoration: underline;
+  border-radius: 5px;
+  font-weight: 700;
+  background-image: linear-gradient(#7acbebd8, tomato);
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.content-box {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  width: 267px;
+  height: 377px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background-image: linear-gradient(lightgray, #7acbebd8);
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
