--- a/css/style.css
+++ b/css/style.css
@@ -86,9 +86,9 @@ body {
 }
 .h3 {
   text-align: center;
-  font-weight: 700;
-  padding-left: 75px;
-  font-size: x-larger;
+  font-weight: 900;
+  padding-left: 70px;
+  font-size: 25px;
   font: bolder;
   color: rgba(255, 118, 94, 0.842);
 }
