--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
 }
 .intern-title {
   margin-right: 800px;
-  margin-left: 600px;
+  margin-left: 650px;
   text-align: center;
   font-size: 25px;
   font-weight: 700;
@@ -184,7 +184,7 @@ body {
 }
 .intern-sub-title {
   margin-right: 800px;
-  margin-left: 600px;
+  margin-left: 650px;
   color: #757575;
   font-weight: 600;
   font-size: 20px;
@@ -193,7 +193,7 @@ body {
 }
 .intern-cg {
   margin-right: 800px;
-  margin-left: 600px;
+  margin-left: 650px;
   text-align: center;
   font-weight: 700;
   color: #757575;
@@ -201,7 +201,7 @@ body {
 }
 .intern-description {
   margin-right: 800px;
-  margin-left: 600px;
+  margin-left: 650px;
   font-weight: 700;
   color: #757575;
   font-family: "Times New Roman", Times, serif;
@@ -233,15 +233,16 @@ body {
 .like-title {
   text-align: center;
   padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-bottom: 20px;
-
-  padding: 30px 20px 20px 30px;
-  margin-right: 600px;
-  margin-left: 400px;
+  margin-right: 700px;
+  margin-left: 550px;
   text-align: center;
   color: #ddf5fffa;
   text-decoration: underline;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: 700;
   background-image: linear-gradient(#7acbebd8, tomato);
   font-family: Georgia, "Times New Roman", Times, serif;
