--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ body {
   box-shadow: 10px 10px 10px lightgray;
 }
 .section-title {
+  /* padding-top: 50px; */
   margin-top: 30px;
   padding: 30px 20px 30px 20px;
   margin-right: 700px;
@@ -220,17 +221,16 @@ body {
   box-shadow: 10px 10px 10px lightgray;
 }
 .like {
-  background-image: linear-gradient(lightgray, #e3e6e7d8);
-  padding-top: 20px;
-  margin: 0px 230px;
-  box-shadow: 30px 30px 30px 0px lightgray;
+ padding-top: 20px;
 }
 .like1 {
   background-image: linear-gradient(#e3e6e7d8, lightgray);
   box-shadow: 10px 10px 10px lightgray;
   display: flex;
-  gap: 50px;
-  justify-content: center;
+  gap: 1px;
+  justify-content: space-around;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 .like-title {
   text-align: center;
@@ -239,8 +239,8 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin-bottom: 20px;
-  margin-right: 700px;
-  margin-left: 550px;
+  margin-right: 880px;
+  margin-left: 720px;
   text-align: center;
   color: #ddf5fffa;
   text-decoration: underline;
@@ -250,14 +250,13 @@ body {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 .content-box {
-  margin-top: 50px;
-  margin-bottom: 30px;
+  margin: 50px 50px;
   width: 267px;
   height: 377px;
   flex-shrink: 0;
   border-radius: 5px;
-  background-image: linear-gradient(lightgray, #7acbebd8);
-  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  background-image: linear-gradient(#FFF,wheat);
+  box-shadow: 0px 6px 50px 0px #fff;
 }
 .like-title1 {
   text-align: right;
@@ -287,4 +286,8 @@ body {
 .section {
   background-image: linear-gradient(#e3e6e7d8, lightgray);
   box-shadow: 10px 10px 10px lightgray;
+}
+.like-box {
+  margin-top: 30px;
+  margin-left: 30px;
 }
