--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,9 @@ body {
   background-image: linear-gradient(#7acbebd8, tomato);
   color: white;
   font-weight: 600;
-  text-align: center;
   padding: 10px 40px;
   border-radius: 5px;
-  margin-left: 50px;
+  margin-left: 770px;
   text-align: center;
 }
 .h1-color1 {
@@ -221,7 +220,7 @@ body {
   box-shadow: 10px 10px 10px lightgray;
 }
 .like {
- padding-top: 20px;
+  padding-top: 20px;
 }
 .like1 {
   background-image: linear-gradient(#e3e6e7d8, lightgray);
@@ -255,33 +254,30 @@ body {
   height: 377px;
   flex-shrink: 0;
   border-radius: 5px;
-  background-image: linear-gradient(#FFF,wheat);
+  background-image: linear-gradient(#fff, wheat);
   box-shadow: 0px 6px 50px 0px #fff;
 }
+.description1 {
+  color: var(--dark-03, #757575);
+  font-family: Open Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: left;
+  justify-content: space-around;
+  margin-right: 10px;
+}
 .like-title1 {
-  text-align: right;
-  margin-right: 100px;
-  margin-top: 100px;
-  font-size: 50px;
-  justify-content: center;
-  margin-bottom: 20px;
-  text-decoration: underline;
-
-  /* 
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 20px;
-  margin-right: 700px;
-  margin-left: 550px;
-  text-align: right;
-  color: #ddf5fffa;
-  text-decoration: underline;
-  border-radius: 10px;
-  font-weight: 700;
-  background-image: linear-gradient(#7acbebd8, tomato);
-  font-family: Georgia, "Times New Roman", Times, serif; */
+  margin-bottom: 10px;
+  margin-top: 40px;
+  font-weight: 35px;
+  text-align: center;
+}
+.section-description {
+  color: #757575;
+  font-size: 18px;
+  margin-bottom: 30px;
 }
 .section {
   background-image: linear-gradient(#e3e6e7d8, lightgray);
@@ -291,3 +287,40 @@ body {
   margin-top: 30px;
   margin-left: 30px;
 }
+.connect {
+  display: flex;
+  gap: 100px;
+  background-image: linear-gradient(lightgray, #fff8f3);
+  margin: 100px;
+  padding: 130px 200px;
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.06);
+  height: 500px;
+  flex-shrink: 0;
+}
+.name {
+  margin: 10px;
+  background-image: linear-gradient(wheat, #fff8f3);
+  box-shadow: 3px 7px 10px 1px #757575;
+}
+.link-btn3 {
+  text-decoration: none;
+  background-image: linear-gradient(#7acbebd8, tomato);
+  color: white;
+  font-weight: 600;
+  padding: 10px 40px;
+  border-radius: 5px;
+  margin-left: 10px;
+  text-align: center;
+}
+.link-btn4{
+  text-decoration: none;
+  background-image: linear-gradient(#7acbebd8, tomato);
+  color: white;
+  font-weight: 300;
+  font-size: 20px;
+  padding: 10px 40px;
+  border-radius: 5px;
+  margin-left: 60px;
+  text-align: center;
+}
+
