--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 .top-banner {
   display: flex;
   box-shadow: 10px 10px 10px lightgray;
-  background-image: url(../images/developer.png),
+  background-image: url("../images/developer.png"),
     linear-gradient(#7acbebd8, lightgray);
   background-repeat: no-repeat;
   background-size: contain;
