--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 * {
   padding: 0px 5px 0px 0px;
-  
 }
 
 body {
@@ -113,7 +112,7 @@ body {
   font-weight: 600;
   padding: 10px 40px;
   border-radius: 5px;
-  margin-left: 760px;
+  margin-left: 860px;
   text-align: center;
 }
 .h1-color1 {
@@ -328,4 +327,8 @@ body {
 .copyright {
   text-align: center;
   padding-bottom: 40px;
+}
+
+.h3-web {
+  margin-right: 90em;
 }
